[package]
name = "rsmonkey"
version = "0.1.0"
authors = ["Max Mindlin <maxmindlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
	"rsmonkey-parser",
	"rsmonkey-eval"
]

[[bin]]
name = "repl"
path = "rsmonkey-repl/src/main.rs"

[dependencies]
rsmonkey-parser = { path = "./rsmonkey-parser" }
rsmonkey-eval = { path = "./rsmonkey-eval" }
rustyline = "8.0.0"
